# markwell

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  SECURITY.md  build.sh  install.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
crates/markdown-app/: Cargo.toml  tauri.conf.json
crates/markdown-app/capabilities/: default.json
crates/markdown-app/icons/: icon.icns
crates/markdown-app/src/: cli.rs  gui.rs  main.rs
crates/markdown-app/tests/: view_cli.rs
crates/markdown-app/ui/: index.html
crates/markdown-cli/: Cargo.toml
crates/markdown-cli/src/: main.rs
crates/markdown-core/: Cargo.toml
crates/markdown-core/tests/: fixture_harness.rs  parse_markdown.rs
crates/markdown-ffi/: Cargo.toml
crates/markdown-ffi/src/: lib.rs
crates/markdown-render-html/: Cargo.toml
crates/markdown-render-html/src/: lib.rs
crates/markdown-render-html/tests/: render_html.rs
crates/markdown-render-terminal/: Cargo.toml
crates/markdown-render-terminal/src/: lib.rs
crates/markdown-render-terminal/tests/: render_terminal.rs
crates/mdstar-app/: Cargo.toml  tauri.conf.json
crates/mdstar-app/capabilities/: default.json
crates/mdstar-app/src/: cli.rs  gui.rs  main.rs
crates/mdstar-app/ui/: index.html
crates/mdstar-cli/: Cargo.toml
crates/mdstar-cli/src/: main.rs
crates/mdstar-core/: Cargo.toml
crates/mdstar-core/src/: lib.rs
crates/mdstar-core/tests/: fixture_harness.rs  parse_markdown.rs
crates/mdstar-ffi/: Cargo.toml
crates/mdstar-ffi/src/: lib.rs
crates/mdstar-render-html/: Cargo.toml
crates/mdstar-render-html/src/: lib.rs
crates/mdstar-render-html/tests/: render_html.rs
crates/mdstar-render-terminal/: Cargo.toml
crates/mdstar-render-terminal/src/: lib.rs
crates/mdstar-render-terminal/tests/: render_terminal.rs
docs/: README.md  architecture.md  design.md  ideation.md  index.html  milestone-status.md  milestones.md  prd.md  project-plan.md  release-checklist.md  research.md  roadmap.md  site.css  site.js  ui-gpui-design.md
macos/MarkwellQuickLook/: Info.plist  README.md  build.sh  project.yml
macos/MarkwellQuickLook/MarkwellQuickLook.xcodeproj/: project.pbxproj
macos/MarkwellQuickLook/Sources/: MarkdownRenderer.swift  PreviewProvider.swift  generator.m
tests/fixtures/: big.md  sample.md
tests/fixtures/core/: basic.md
tests/fixtures/expected-cli/: basic.txt
tests/fixtures/expected-core/: basic.txt
