[package]
name = "markdown-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
markdown-render-terminal = { path = "../markdown-render-terminal" }
shell-words = { workspace = true }
crossterm = { workspace = true }
ratatui = { workspace = true }
ansi-to-tui = { workspace = true }
ratatui-textarea = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }

[[bin]]
name = "md"
path = "src/main.rs"
